[gd_scene load_steps=5 format=3 uid="uid://yyhcyw45avnk"]

[ext_resource type="Script" path="res://inv_ui/slot/inv_ui_slot.gd" id="1_tp076"]
[ext_resource type="Texture2D" uid="uid://j082i5e2d45e" path="res://assets/inventory.png" id="2_qnkfl"]
[ext_resource type="Texture2D" uid="uid://bfphxvjfwitkj" path="res://assets/tile-selected.png" id="3_i83hd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_is8bu"]
size = Vector2(16, 16)

[node name="inv_UI_slot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource("1_tp076")

[node name="slot" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_qnkfl")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="item_display" type="Sprite2D" parent="CenterContainer/Panel"]
texture_filter = 1

[node name="Label" type="Label" parent="CenterContainer/Panel"]
texture_filter = 1
custom_minimum_size = Vector2(19, 23)
layout_mode = 0
offset_right = 19.0
offset_bottom = 23.0
scale = Vector2(0.4, 0.4)
text = "99
"
horizontal_alignment = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_i83hd")
centered = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_is8bu")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
